[tool.poetry]
name = "sentry-cli-updater"
version = "0.1.0"
description = "Sentry Linux Cli Updater(tested on ubuntu 22.04)"
authors = ["Po <chenjunfeng@ethstorage.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
